Fixed mobile misalignment

--- a/styles/landingPage/lp.module.css
+++ b/styles/landingPage/lp.module.css
@@ -75,7 +75,6 @@
   animation: fadeIn 0.25s ease-in-out;
   padding: 0 30px 0 0;
   margin-left: 30px;
-  /* background-color: red; */
 }
 
 .badgeHeaderText {
@@ -194,7 +193,7 @@
     align-items: center;
     margin-top: 50px;
     animation: fadeIn 0.251s ease-in-out;
-    padding: 10% 20px;
+    padding: 10%;
   }
 
   .topPageSectionContainer {
